--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.4.9",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "moment-timezone": "^0.6.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
