--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "moment-timezone": "^0.6.0",
+    "qr-code-styling": "^1.9.2",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
